--- a/src/FinalPage.css
+++ b/src/FinalPage.css
@@ -17,6 +17,20 @@
   }
 
   .final-background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/public/mindfulness_welcome.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.5;
+    z-index: -1;
+    transform: scaleX(-1);
+  }
+
+  .final-background-image {
     width: 100%;
     height: 100vh;
     object-fit: cover;
