--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -17,8 +17,17 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.logo-container {
+  background-image: url('/public/mlogo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 50px;
+  width: 150px;
+}
+
 .logo-container img {
   height: 50px;
+  display: none;
 }
 
 .nav-links {
@@ -48,6 +57,20 @@ body {
 }
 
 .landing-background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/public/mindfulness_welcome.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+  transform: scaleX(-1);
+}
+/* 
+.landing-background-image {
   width: 100%;
   height: 100vh;
   object-fit: cover;
@@ -57,7 +80,7 @@ body {
   opacity: 0.7;
   z-index: -1;
   transform: scaleX(-1);
-}
+} */
 
 .welcome-message {
   /* text-align: center; */
