--- a/src/MeditationPage.css
+++ b/src/MeditationPage.css
@@ -22,19 +22,44 @@
   z-index: -1;
 }
 
+.meditation-background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url('/public/meditation.jpg'); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+  transform: scaleX(-1);
+}
+
 .meditation-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+    background-image: url('/public/meditation.jpg');
+    opacity: 0.9;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .title {
   font-size: 2rem;
   text-align: center;
   margin-top: 2rem;
-  padding-top: 7rem;
+  /* padding-top: 7rem; */
 }
 
 .video-container {
